[package]
name = "self-update"
version = "1.0.0"
authors = ["Near Inc <hello@near.org>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

# template: https://github.com/SourceScan/cargo-near-image/tree/0.6.0-near
# => 
# https://github.com/dj8yfo/cargo-near-image/tree/0.x.x-builer-local-cargo-near


[package.metadata.near.reproducible_build]
image = "dj8yfo/sourcescan:0.x.x-dev-cargo-near-build-cmd-repo"
image_digest = ""
container_build_command = "cargo near build --no-release --no-doc"
source_code_git_url = "https://github.com/dj8yfo/sample_workspace_with_submodules.git"

[dependencies]
near-sdk = { workspace = true }

[dev-dependencies]
near-sdk = { workspace = true }
near-workspaces = { version = "0.10.0", features = ["unstable"] }
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1"
rstest = "0.18.2"
